add nicknames field
