# example-server/swagger.yml
@@ -128,6 +128,10 @@ definitions:
       name:
         type: "string"
         example: "doggie"
+      nicknames:
+        type: array
+        items:
+          type: string
   ApiResponse:
     type: "object"
     properties:
